flask-chart/templates/frontend-deployment.yaml
# frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app-frontend
  namespace: flask-app
  labels:
    app: flask-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-frontend
  template:
    metadata:
      labels:
        app: flask-frontend
    spec:
      containers:
        - name: frontend
          image: mdzahid786/flask-app-frontend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
