flask-chart/templates/frontend-service.yaml
# Service port match with the outside machine port with the help of Port Forward
# kubectl port-forwart service-name outside-machinde-port:service-port

# frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: flask-app
  labels:
    app: flask-frontend
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: flask-frontend
