flask-chart/templates/ingress.yaml
# 1. Get IP => minikube ip
# 2. Run command to enable ingress => minikube addons enable ingress
# 3. Edit etc/hosts file => sudo nano /etc/hosts
#    192.168.49.2    backend.local
#    192.168.49.2    frontend.local
# 4. Access http://frontend.local, http://backend.local
# kubectl port-forward -n ingress-nginx service/ingress-nginx-controller 8080:80

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-app-ingress
  namespace: flask-app
spec:
  ingressClassName: nginx # <--- use this instead of annotation
  rules:
    - host: backend.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 5000
    - host: frontend.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 8000
